# capitalbench

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DATA_LICENSE.md  NOTICE  README.md  SECURITY.md  benchmark_sets.yaml  cumulative_selection.example.yaml  improvements.md  pyproject.toml  setup.py
.github/workflows/: capitalbench-resolver.yml  deploy-web.yml  interim-performance.yml  public-repo-audit.yml  site-health.yml
apps/web/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
configs/: asset_risk_model.yaml  models.example.yaml  pricing.example.yaml
cumulative/: cumulative_report.md  official_leaderboard.csv  round_index.csv  stability_leaderboard.csv
docs/: anti_momentum_controls.md  benchmark-sets.md  fairness.md  first_round_checklist.md  insights_engine_plan.md  limitations.md  methodology_versions.md  model_behavior_patterns.md  operations_runbook.md  protocol.md  research_prompt_workflow.md  scoring.md  weekly_rounds_plan.md
insights/: index.json  latest.json
latest/: latest_round_leaderboard.csv  latest_round_report.md
scripts/: public_repo_audit.py
supabase/: README.md
tests/: test_audit_and_sample.py  test_automation.py  test_cumulative.py  test_hashing.py  test_insights.py  test_interim_performance.py  test_official_stability.py  test_prices.py  test_provider_response_parsing.py  test_research.py  test_run_isolation.py  test_runner.py  test_schemas.py  test_scoring.py  test_universe.py  test_validation.py  test_web_sync.py  test_weekly_performance.py
(+1853 files in other folders)
