[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capitalbench"
version = "0.1.0"
description = "Offline, time-resolved LLM evaluation for market allocation decisions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ishtiaq Rahman" },
]
keywords = [
  "llm-evaluation",
  "benchmark",
  "markets",
  "finance",
  "reproducibility",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/ishtiaqrahman/capitalbench"
Repository = "https://github.com/ishtiaqrahman/capitalbench"
Issues = "https://github.com/ishtiaqrahman/capitalbench/issues"

[project.optional-dependencies]
test = [
  "pytest>=8",
]
web-sync = [
  "supabase>=2,<3",
]

[project.scripts]
capitalbench = "capitalbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
